--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,9 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+
+
+# Ignore MacOS DS_Store
+.DS_Store
+*.xcuserstate
+Podfile.lock
